# rhapso

./: .gitignore  .gitmodules  Readme.md  UoB_ender3.yaml  angle.py  basic_test.py  bed.py  config.py  cura4layer.py  ender3.py  ender3.yaml  ender3v2.py  ender3v2.yaml  gclayer.py  gcline.py  gcode.py  gcode_file.py  gcode_printer.py  gen_figures.ipynb  geometry_helpers.py  lablogging.py  list_modules.py  logger.py  manual test using basic.ipynb  manual_printer.py  manual_printer.yaml  manual_printer_old.py  manualprinter.py  manualprinter.yaml  move_grabber.py  non_planar_layer.py  parsers.py  plot_helpers.py  plot_styles.py  plotting.py  printer.py  prusa_mini.py  prusa_mini.yaml  pyproject.toml  requirements.txt  (+15 more)
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
example/: Router test-cura5.3mf  Router test-routed.gcode
example/basic test/: basic test-routed.gcode
example/bracelet/: bracelet-cura5.gcode  bracelet-routed.gcode  bracelet.3mf
example/manual test - prusa mini/: Prusa mini manual test v2.3mf  basic test-routed-manual-grabbers.gcode  basic test-routed-manual.gcode  grabbers.stl  manual test - prusa mini - cura - grabbers.gcode  manual test - prusa mini - cura.gcode  manual test - prusa mini - prusaslicer - grabbers added.gcode  manual test - prusa mini - prusaslicer - grabbers.gcode  manual test - prusa mini - prusaslicer - routed - pre grabbers.gcode  manual test - prusa mini - prusaslicer.gcode  (+2 more)
geometry/: __init__.py  angle.py  gcast.py  ghalfline.py  gpoint.py  gpolyline.py  gsegment.py  utils.py
parsers/: __init__.py  basic.py  cura4.py  prusa.py
(+23 files in other folders)
